--- a/src/server/AggregatorLib/AggregatorLib.csproj
+++ b/src/server/AggregatorLib/AggregatorLib.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="NodaTime" Version="3.0.5" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
