--- a/src/server/AggregatorLibTest/AggregatorLibTest.csproj
+++ b/src/server/AggregatorLibTest/AggregatorLibTest.csproj
@@ -9,6 +9,34 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestData\atom\singlePost.xml" />
+    <None Remove="TestData\atom\singlePostUpdated.xml" />
+    <None Remove="TestData\atom\singlePost_NoAuthorUri.xml" />
+    <None Remove="TestData\atom\singlePost_NoCommentsFeed.xml" />
+    <None Remove="TestData\atom\singlePost_NoCommentsLink.xml" />
+    <None Remove="TestData\atom\singlePost_NoCommentsLinkOrFeed.xml" />
+    <None Remove="TestData\atom\singlePost_WithCategories.xml" />
+    <None Remove="TestData\atom\tenPosts.xml" />
+    <None Remove="TestData\atom\tenPosts_3to12.xml" />
+    <None Remove="TestData\atom\twoPosts.xml" />
+    <None Remove="TestData\atom\twoPosts_oneUpdated.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="TestData\atom\singlePost_NoAuthorUri.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost_NoCommentsLinkOrFeed.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost_NoCommentsFeed.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost_NoCommentsLink.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost_WithCategories.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePostUpdated.xml" />
+    <EmbeddedResource Include="TestData\atom\tenPosts.xml" />
+    <EmbeddedResource Include="TestData\atom\tenPosts_3to12.xml" />
+    <EmbeddedResource Include="TestData\atom\twoPosts.xml" />
+    <EmbeddedResource Include="TestData\atom\twoPosts_oneUpdated.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
