--- a/src/server/AggregatorLibTest/AggregatorLibTest.csproj
+++ b/src/server/AggregatorLibTest/AggregatorLibTest.csproj
@@ -15,6 +15,9 @@
     <None Remove="TestData\atom\singlePost_NoCommentsFeed.xml" />
     <None Remove="TestData\atom\singlePost_NoCommentsLink.xml" />
     <None Remove="TestData\atom\singlePost_NoCommentsLinkOrFeed.xml" />
+    <None Remove="TestData\atom\singlePost_NoFeedTitle.xml" />
+    <None Remove="TestData\atom\singlePost_NoIconUri.xml" />
+    <None Remove="TestData\atom\singlePost_NoSubtitle.xml" />
     <None Remove="TestData\atom\singlePost_WithCategories.xml" />
     <None Remove="TestData\atom\singlePost_WithPublishedTime.xml" />
     <None Remove="TestData\atom\singlePost_WithUpdateAndPublishTime.xml" />
@@ -26,6 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="TestData\atom\singlePost_NoFeedTitle.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost_NoIconUri.xml" />
+    <EmbeddedResource Include="TestData\atom\singlePost_NoSubtitle.xml" />
     <EmbeddedResource Include="TestData\atom\singlePost_WithUpdateAndPublishTime.xml" />
     <EmbeddedResource Include="TestData\atom\singlePost_WithUpdatedTime.xml" />
     <EmbeddedResource Include="TestData\atom\singlePost_WithPublishedTime.xml" />
