--- a/src/server/AggregatorLibTest/AggregatorLibTest.csproj
+++ b/src/server/AggregatorLibTest/AggregatorLibTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -29,18 +29,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="TestData\atom\singlePost_NoFeedTitle.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_NoIconUri.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_NoSubtitle.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_WithUpdateAndPublishTime.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_WithUpdatedTime.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_WithPublishedTime.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_NoAuthorUri.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_NoCommentsLinkOrFeed.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_NoCommentsFeed.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_NoCommentsLink.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost_WithCategories.xml" />
-    <EmbeddedResource Include="TestData\atom\singlePost.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoFeedTitle.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoIconUri.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoSubtitle.xml" />
+    <EmbeddedResource Include="TestData\AggregatorSystem\atom\singlePost.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_WithUpdatedTime.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_WithPublishedTime.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoAuthorUri.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoCommentsLinkOrFeed.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoCommentsFeed.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_NoCommentsLink.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost_WithCategories.xml" />
+    <EmbeddedResource Include="TestData\FeedExtractor\atom\singlePost.xml" />
     <EmbeddedResource Include="TestData\atom\singlePostUpdated.xml" />
     <EmbeddedResource Include="TestData\atom\tenPosts.xml" />
     <EmbeddedResource Include="TestData\atom\tenPosts_3to12.xml" />
