--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,9 +10,11 @@
   "author": "John A. Stevens",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "jquery": "^3.6.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "css-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "rimraf": "^3.0.2",
